# ChangeLog for net-print/cups
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.439 2012/01/15 18:50:40 dilfridge Exp $

*cups-1.5.0-r3 (15 Jan 2012)
*cups-1.4.8-r23 (15 Jan 2012)

  15 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +cups-1.4.8-r23.ebuild, +cups-1.5.0-r3.ebuild:
  Update icon cache etc, bug 370059

  15 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -files/cups-1.3.0-configure.patch, -files/cups-1.3.7-backend-https.patch,
  -files/cups-1.3.10-str3178.patch, -cups-1.3.11-r4.ebuild,
  -files/cups-1.3.11-pdf-m4.patch, -files/cups-1.3.11-str3200.patch,
  -files/cups-1.3.11-str3367-security-1.3v2.patch,
  -files/cups-1.3.11-str3401-security-1.3v2-regression.patch,
  -cups-1.4.6-r2.ebuild, -files/cups-1.4.6-web-hang.patch,
  -cups-1.4.8-r21.ebuild, -cups-1.5.0-r1.ebuild:
  Remove old

  13 Nov 2011; Justin Lecher <jlec@gentoo.org> cups-1.3.11-r4.ebuild,
  cups-1.4.6-r2.ebuild, cups-1.4.8-r1.ebuild, cups-1.4.8-r21.ebuild,
  cups-1.4.8-r22.ebuild, cups-1.5.0-r1.ebuild, cups-1.5.0-r2.ebuild:
  Corrected Slotting of media-libs/tiff and media-libs/libpng

  18 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org> cups-1.5.0-r2.ebuild:
  cups 1.5 should handle the usb printing properly without any kernel hackery.

  03 Sep 2011; Raúl Porcel <armin76@gentoo.org> cups-1.4.8-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #380771

  29 Aug 2011; Jeroen Roovers <jer@gentoo.org> cups-1.4.8-r1.ebuild:
  Stable for HPPA (bug #380771).

*cups-1.5.0-r2 (28 Aug 2011)
*cups-1.4.8-r22 (28 Aug 2011)

  28 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +cups-1.4.8-r22.ebuild, +files/cups-1.4.8-largeimage.patch,
  +cups-1.5.0-r2.ebuild:
  Add upstream fix for bug 378597, mis-printing of large image files

  28 Aug 2011; Tony Vroon <chainsaw@gentoo.org> cups-1.4.8-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &