@@ -12,31 +12,31 @@ AUX cups-1.4.6-force-gnutls.patch 3319 RMD160 c6cc024a702305eb81661d5cdadd9857e9
 AUX cups-1.4.6-serialize-gnutls.patch 3625 RMD160 873b2806cfec732c4a4f3f2981f666a958dd5b0e SHA1 aae046121d0139fbba1cb9147c8742f73b2f1fa0 SHA256 6bc9e16fc6865b2f3e0ee2d1947bdde691e41f90fce32b9839b3661dcea4a827
 AUX cups-1.4.8-CVE-2011-3170.patch 1045 RMD160 9a27eb1ec34ced57da5bbe7c55261d8aa35b01c0 SHA1 6155d7c4b34ff6447a93aa56fa4b5958eb943202 SHA256 c94d49c3ff980b830874dae4158768554f87f429ae400838a605505aae350af6
 AUX cups-1.4.8-largeimage.patch 572 RMD160 62e0a92fb1dc62adff43bcdc22f201da426d8916 SHA1 1528f2b1f67e7c532418dd7f495db1788ae7d2d4 SHA256 364a3ed3e161ad75836e6bc56746c25207680ab6f44563219c93146f0cf74541
-AUX cupsd.init.d 293 RMD160 19fbef21cee7e472e7028f3101b680baa0089c54 SHA1 e6b27b2638fec258fe2f55c926c2530e909ca3d2 SHA256 b4268a6bae95e96b6af21c3716ecc905073736ce7dc33be1489d574a447f3c48
+AUX cupsd.init.d 402 RMD160 1b132354d01ad2ecebbe5238b09dfa3cb9391d43 SHA1 ea48170f3369486792ed9f98fe7d1c53487b455c SHA256 66b14dffc99900c0db04453765e5bf48cdf0c197c6f50dccf2a55dc66dd0cf95
 AUX pdftops-1.20.gentoo 10412 RMD160 16e229662c47e03af1d1f4cb5764a76d17a66642 SHA1 6afb8a655b6ff013a2c8c8cbfb615ba1e561503b SHA256 ac5fa01ca776d75bd7cef62eef9f6b0c3945ee87e8950b40ca9f9f3ff46a16c1
 DIST cups-1.4.8-source.tar.bz2 4547162 RMD160 ee80e8d0b56dc0e2edf2a9aa9a43c4b92619f741 SHA1 9167f556e78e0bc075f1eb2f695d79cc1f334007 SHA256 6bd27e1213c139ed0bbadc5c29f97cf1e8f7f8f5b0bb29b227ecaff32aafa9a6
 DIST cups-1.5.0-source.tar.bz2 4090210 RMD160 e7be9b6b44428561609c59abaea8fa31a11aefff SHA1 628f549867751e373fc20c7558fec422f9eb942b SHA256 c6f99b68a558f4d626e9a5076d664f38e9925715dc541b07f0328c9aeb02ec33
 EBUILD cups-1.4.8-r1.ebuild 7192 RMD160 43c67440f0b0b8770feec13af5ab051b5d2412e6 SHA1 9c27bcd87594fda8f828e95bae9b42760b2710a3 SHA256 c2561794a4711d8f58b46a9deed774f82bee57cb8f5a6ab341cfb116597de18b
 EBUILD cups-1.4.8-r22.ebuild 8493 RMD160 39b39b32ddc4bead92546180f11f377b9bdbca01 SHA1 6e5397d498b9ae8e66e74d9a1253b44ac79d77e1 SHA256 5eae14cd692f2639a69c518bbd381b04cc7fdfdca067c944bd90181212c5b387
-EBUILD cups-1.4.8-r23.ebuild 8828 RMD160 0b2c0f55e2c9fb4ade48dab2e2638b819ed2686a SHA1 3857818ec51960a3e7bbef7e2aa38766fdb7965e SHA256 c85d36f2fb67693ffbe0d9c21d9e401d0dd5051c8b61ba32639147c2eeb813b2
+EBUILD cups-1.4.8-r23.ebuild 8808 RMD160 717f05c1f06594572072289e74eaa2bc9757afc0 SHA1 4bedd20c15a6ed14acb4d31f4335b6b09545f4ff SHA256 f18dd361bcc4dfd1070b315fe20b7f65cadce177dc81137121fa56dc11a821f6
 EBUILD cups-1.5.0-r2.ebuild 6501 RMD160 0137c7b531696e83d0ce536f0681321d6f9d4726 SHA1 46e87de85a2d705428ff75d2063cc274e48e753d SHA256 64bdb26eea84190d450f9d0228b46581b2024a9a9af4c061f96821bb9aec43f4
-EBUILD cups-1.5.0-r3.ebuild 6836 RMD160 9ed073e2a74abd6e2831d604ebec40696e3968bb SHA1 6f37eadfa04f41a79a8292ebe93b72c3d23fec44 SHA256 0e4dca1ff27cac8d021a5173ae03cb9db59f4ecbe17a3828a951ea2259c570c6
-MISC ChangeLog 66639 RMD160 c6ce14ceb180f7e01c51b0a800b8360d963d70d8 SHA1 640f673414df951900b9053f906ef3d44a9c30fd SHA256 f02ac374a6e393124be6493537c2e6b05da515930d291d6274082ba566262c33
+EBUILD cups-1.5.0-r3.ebuild 6816 RMD160 1688e88622e04ec695b080a14e9c5484cb45d86a SHA1 d4396a988395c9df8655cbd1575ec97cd3ee736d SHA256 a2633ed9dad3f47fd25076282c008982358c25179b4a40d09b18f6b6b09aadff
+MISC ChangeLog 66816 RMD160 71ff5d1b95658b33da79abc9714cdefdbcbc19b7 SHA1 c4fe5b426f43eaab8fedd4648420989287394671 SHA256 d69e82883b7f585639000c1dff2ea78e369d4c00d5a31345e50f391a9936ac7e
 MISC metadata.xml 586 RMD160 73a1f1c0096d5035dfa53207b00c125894f6822a SHA1 123501263490cab57af2b99f2336fb70c094d9b0 SHA256 3b729c497ee38452b1ca051b759f43b5f9e117f9c36c0f3b660e4bd8ab7c295b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPEyBEAAoJENwGBM22xffeEisP/RyXeqtPrUlspvwgSY7GhckW
-KJJF5NyZY6UiDtjOpeKobx3EslsXRwcr8BBe5DDStC6U4Chw0W2B5QUC+P55AICD
-+aYIm66uvOgyHs6e+jTPQ7RoDQcVbTFAUtr5hqFjFE4k9iEwkDV+EWucGzD3s86s
-Q5Nbu/uOcihrf1B07HcEQsbdY3WC9yBNOGrCI82mE5jwtV2WrfAq8zIpn605fbcs
-zCIhK5TePfYF+ii4j0akSFW4JzYfCk+zJ0sRBF2h15lMAo+V9lX4TTHlkb5I/N6r
-l3izErNEqgZS2qqRKgm6l1o7Tz8zPZuYQNvvt9mruavTcDX9Fh010LQO94ZbtLqS
-3+8HprdGBFAymvC/4QBK33FSw9aXTsPgVb9fHoRr5qFa2M6/UVos4YAdtKkGwXpO
-jKvwbx1+shb1bFlheIYE2AVdDYOEqK1/o76G19wqhmqZx6mp7B+Ow3Y4nNd2wN6P
-wPFWHG2SLpoWwrnLNKXK+qK34VP8Mni/afXXfrRMZa4RHQu4xDQ5azqv9p+zdYYh
-pNzEWlBaiKpCTAAKm6y9u+b/hTLRqzu6g90b3uMfozJ8s6sTF36XZUjLPzeYZhbT
-2W2LBkpjzCdxwpEIAUMhDBy1YTLW6nYqzs1io/JtPaWlBufEQ/kK4gJywFEUsPSu
-Hoznrw4XMiyIvPvIjsHB
-=mUPH
+iQIcBAEBCgAGBQJPEzUxAAoJENwGBM22xffe9oUP/21lEs1JUl/MLEvXLVrCFqjq
+FICBemEnuhnCHcpyAk2hanZXZFvaL90VDS64XXX+XLMz0+LJUY0NjBooMYQiAIHz
+tZZeXnNWJgtFOMyOOR6dQoW1N+oVWA2eLBs75HODa3JiZjHROizhMjzNk1cZpq2N
+DCQu27AkpRxsmMwoogLCIYca5th/RgtjwmvK8Rq+jFHIYzTOnDT6zJHZ/QxbvSpQ
+/mWEwjFrnG3KYbZyoWCsLm/kgUOsp/GuRPzjeP+y4NOCuFEiWmCRC6DnJOAGKM3e
+PZqEjap9fbj8dvE2/Phz8p/J5GqeTLj34HgjAU5az/PLWOKr2GoVgKUStC1AbzuE
+SnRP4/JRPlX0VMJIDN+XCj2efqiylN0BWV5t4NqxCnQ2oXHaT0NH5peRsJeyABXz
+dYtXPP11mUjQCm/QiXwT3cE+DwdLnfG8NFg7h/Lyk/KUsiaR5drrEsg3Wlrx5hWM
+uNBEw/1Bfg2+z+MZDtv9wsi3JSlcuh715QlL0+YW7R34fxkbFAMj907gZ3ohudGh
+QJ+lVZwZsgJiq8zz0paZ/9eFKzAtXipaguIRSOktaFSSiXAQcHJVtDfxrHS9Carh
+aokQ2d9NqInikZYZOOhBwgdWk57fUoIf8xpbWx+uWfaYu3DIQOuL0iFKni/z6qk8
+guKPMaQ3nZswm+T/kre8
+=DWn9
 -----END PGP SIGNATURE-----
