@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups/cups-1.4.8-r23.ebuild,v 1.1 2012/01/15 18:50:40 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups/cups-1.4.8-r23.ebuild,v 1.2 2012/01/15 20:19:54 dilfridge Exp $
 
 EAPI=3
 
@@ -277,7 +277,7 @@ src_install() {
 	fi
 
 	keepdir /usr/libexec/cups/driver /usr/share/cups/{model,profiles} \
-		/var/cache/cups /var/cache/cups/rss /var/log/cups /var/run/cups/certs \
+		/var/cache/cups /var/cache/cups/rss /var/log/cups \
 		/var/spool/cups/tmp
 
 	keepdir /etc/cups/{interfaces,ppd,ssl}
