@@ -1,6 +1,10 @@
 # ChangeLog for net-print/cups
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.439 2012/01/15 18:50:40 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.440 2012/01/15 20:19:54 dilfridge Exp $
+
+  15 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.4.8-r23.ebuild,
+  cups-1.5.0-r3.ebuild, files/cupsd.init.d:
+  Create dirs in /var/run in initscript, bug 387893
 
 *cups-1.5.0-r3 (15 Jan 2012)
 *cups-1.4.8-r23 (15 Jan 2012)
